--- a/OfflineTrading.SymbolsModule/OfflineTrading.SymbolsModule.csproj
+++ b/OfflineTrading.SymbolsModule/OfflineTrading.SymbolsModule.csproj
@@ -33,6 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Abmes.UnityExtensions, Version=1.0.33.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Abmes.UnityExtensions.1.0.33\lib\net45\Abmes.UnityExtensions.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\packages\Castle.Core.3.3.3\lib\net45\Castle.Core.dll</HintPath>
       <Private>True</Private>
@@ -126,6 +130,7 @@
     </Compile>
     <Compile Include="SymbolsModule.cs" />
     <Compile Include="SymbolViewModelsProvider.cs" />
+    <Compile Include="UnityContainerConfigurator.cs" />
     <Compile Include="ViewModels\ISymbolsViewModel.cs" />
     <Compile Include="ViewModels\ISymbolViewModel.cs" />
     <Compile Include="ViewModels\SymbolsViewModel.cs" />
