--- a/OfflineTrading.TradingModule/packages.config
+++ b/OfflineTrading.TradingModule/packages.config
@@ -1,9 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Abmes.UnityExtensions" version="1.0.33" targetFramework="net461" />
+  <package id="Castle.Core" version="3.3.3" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.2" targetFramework="net452" />
+  <package id="JetBrains.Annotations.Redist" version="7.1" targetFramework="net461" />
   <package id="Prism" version="5.0.0" targetFramework="net452" />
   <package id="Prism.Composition" version="5.0.0" targetFramework="net452" />
   <package id="Prism.Interactivity" version="5.0.0" targetFramework="net452" />
   <package id="Prism.Mvvm" version="1.0.0" targetFramework="net452" />
   <package id="Prism.PubSubEvents" version="1.0.0" targetFramework="net452" />
+  <package id="Unity" version="3.5.1404.0" targetFramework="net461" />
+  <package id="Unity.TypedFactories" version="1.0.55" targetFramework="net461" />
 </packages>
