--- a/OfflineTrading.App/OfflineTrading.App.csproj
+++ b/OfflineTrading.App/OfflineTrading.App.csproj
@@ -178,6 +178,10 @@
       <Project>{5db185a7-78fe-4df3-a243-eb8e72846692}</Project>
       <Name>OfflineTrading.TradingModule</Name>
     </ProjectReference>
+    <ProjectReference Include="..\RateFeed\RateFeed.csproj">
+      <Project>{ea54e35e-c699-448a-82b6-2ee19b002446}</Project>
+      <Name>RateFeed</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
