--- a/OfflineTrading.SymbolsModule/OfflineTrading.SymbolsModule.csproj
+++ b/OfflineTrading.SymbolsModule/OfflineTrading.SymbolsModule.csproj
@@ -171,9 +171,17 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\OfflineTrading.Common.Charting\OfflineTrading.Common.Charting.csproj">
+      <Project>{e0f9f1da-0f8e-4485-be4e-031ad9b53c65}</Project>
+      <Name>OfflineTrading.Common.Charting</Name>
+    </ProjectReference>
     <ProjectReference Include="..\OfflineTrading.Common\OfflineTrading.Common.csproj">
       <Project>{305452e6-5db6-4d77-8860-a62d2e0da830}</Project>
       <Name>OfflineTrading.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RateFeed\RateFeed.csproj">
+      <Project>{ea54e35e-c699-448a-82b6-2ee19b002446}</Project>
+      <Name>RateFeed</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
