--- a/RateFeed/RateFeed.csproj
+++ b/RateFeed/RateFeed.csproj
@@ -47,7 +47,6 @@
     <Compile Include="Factories\SineWaveFuncFactory.cs" />
     <Compile Include="Factories\TriangleWaveFuncFactory.cs" />
     <Compile Include="Factories\WaveFuncFactoryProvider.cs" />
-    <Compile Include="Implementations\WaveFuncProvider.cs" />
     <Compile Include="Implementations\Waves\BlockWaveFunc.cs" />
     <Compile Include="Implementations\Waves\DoubleTriangleWaveFunc.cs" />
     <Compile Include="Implementations\Waves\RandomWaveFunc.cs" />
@@ -57,7 +56,7 @@
     <Compile Include="Interfaces\IRateGeneratorProvider.cs" />
     <Compile Include="Interfaces\IWaveFunc.cs" />
     <Compile Include="Interfaces\IWaveFuncFactory.cs" />
-    <Compile Include="Interfaces\IWaveFuncProvider.cs" />
+    <Compile Include="Interfaces\IWaveFuncFactoryProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Implementations\RateGenerator.cs" />
     <Compile Include="Implementations\RateGeneratorProvider.cs" />
