--- a/OfflineTrading.Common.Charting/OfflineTrading.Common.Charting.csproj
+++ b/OfflineTrading.Common.Charting/OfflineTrading.Common.Charting.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Interfaces\IRateMovementViewModel.cs" />
+    <Compile Include="Interfaces\IRateMovementViewModelFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -76,6 +77,7 @@
       <DependentUpon>RateMovementView.xaml</DependentUpon>
     </Compile>
     <Compile Include="RateMovementViewModel.cs" />
+    <Compile Include="RateMovementViewModelFactory.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
